grammar.js
    source_file: ($) => repeat($._pelt),

    // Comment rule
    _pelt: ($) =>
      choice(
        $.pragma,
        $.incld,
        $.mdefn,
        $.idecl,
        $.xdecl,
        $.ldecl,
        $.lconstructor,
        $.cdefn,
        $.edecl,
        $.wdecl,
        $.ecdecl,
        $.struct,
        $.enumdef,
      ),

    // Pragma rules
    //
    // pragma →	pragma id version-expr ;
    cdefn: ($) =>
      seq(
        optional(field("export", $.export)),
        optional(field("pure", $.pure)),
        "circuit",
        field("id", $.function_name),
        optional(field("gparams", $.gparams)),
        "(",
        commaSep(field("parg", $.parg)),
        ")",
        ":",
        field("type", $.type),
        field("body", $.block),
      ),

    // External-declaration (edecl)
    //
    // edecl → export^opt circuit id gparams^opt ( arg , … , arg ) : type ;
    parg: ($) => seq(field("pattern", $.pattern), ":", field("type", $.type)),

    // Type (type)
    //
    // type →	tref
    //      →	Boolean
    //      →	Field
    //      →	Uint < tsize >
    //      →	Uint < tsize .. tsize >
    //      →	Bytes < tsize >
    //      →	Opaque < str >
    //      →	Vector < tsize , type >
    //      →	[ type , … , type ]
    type: ($) =>
      choice(
        $.tref,
        "Boolean",
        "Field",
        $.uint_type,
        $.bytes_type,
        $.opaque_type,
        $.vector_type,
        seq("[", commaSep($.type), "]"),
      ),
    
    uint_type: ($) => seq("Uint", "<", field("tsize", $.tsize), optional(seq("..", field("tsize", $.tsize))), ">"),
    bytes_type : ($) => seq("Bytes", "<", field("tsize", $.tsize), ">"),
    opaque_type: ($) => seq("Opaque", "<", $.str, ">"),
    vector_type: ($) => seq("Vector", "<", field("tsize", $.tsize), ",", field("type", $.type), ">"),

    // Type-reference (tref)
    //
    // tref → id gargs^opt
    tref: ($) => prec.left(seq(field("id", $.id), optional(field("gargs", $.gargs)))),

    // Type-size (tsize)
    //
    // tsize → nat
    //       → id
    tsize: ($) => choice($.nat, $.id),

    // Generic-argument (garg)
    //
    // garg → nat
    //      → type
    block: ($) => seq("{", repeat(field("stmt", $.stmt)), "}"),

    // Statement (stmt)
    //
    // stmt → expr = expr ;
    //      → expr += expr ;
    //      → expr -= expr ;
    //      → expr-seq ;
    //      → return expr-seq ;
    //      → return ;
    //      → if ( expr-seq ) stmt else stmt
    //      → if ( expr-seq ) stmt
    //      → for ( const id of nat .. nat ) stmt
    //      → for ( const id of expr-seq ) stmt
    //      → assert expr str ;
    //      → const pattern = expr ;
    //      → const pattern : type = expr ;
    //      → block
    stmt: ($) =>
      prec.right(
        choice(
          $.assign_stmt,
          $.expression_sequence_stmt,
          $.return_stmt,
          $.if_stmt,
          $.for_stmt,
          $.assert_stmt,
          $.const_stmt,
          $.block,
        ),
      ),
    
      // Assert statement
    assert_stmt: ($) => seq("assert", field("condition", $.expr), field("message", $.str), ";"),
      return_stmt: ($) => seq("return", optional(field("value", $.expr_seq)), ";"),
    pattern: ($) =>
      choice(
        field("id", $.id),
        field("pattern_tuple", seq("[", optional(commaSep(field("pattern_tuple_elt", $.pattern_tuple_elt))), "]")),
        field("pattern_struct", seq("{", commaSep1(field("pattern_struct_elt", $.pattern_struct_elt)), "}")),
      ),

    // Pattern-tuple-element (pattern-tuple-elt)
    //
    // pattern-tuple-elt → (empty)
    //                   → pattern
    expr_seq: ($) =>
      choice(field("expr", $.expr), seq(field("expr", $.expr), repeat1(seq(",", field("expr", $.expr))), ",", field("expr", $.expr))),

    // Expression (expr)
    //
    // expr → expr0 ? expr : expr
    //      → expr0
    expr: ($) => choice($.conditional_expr, $._expr0),

    // Expression0 (expr0)
    //
    // expr0 → expr0 || expr1
    //       → expr1
    _expr0: ($) => prec.left(choice($.or_expr, $._expr1)),

    // Expression1 (expr1)
    //
    // expr1 → expr1 && expr2
    //       → expr2
    comparison_expr : ($) => seq(field("left", $._expr2), field("operator", choice($.equals, $.not_equals)), field("right", $._expr3)),
    _expr2: ($) =>
      prec.left(
        choice(
          $.comparison_expr,
          $._expr3,
        ),
      ),

    // Expression3 (expr3)
    //
    // expr3 → expr4 < expr4
    //       → expr4 <= expr4
    //       → expr4 >= expr4
    //       → expr4 > expr4
    //       → expr4
    _expr3: ($) =>
      prec.left(
        choice(
          $.rel_comparison_expr,
          $._expr4,
        ),
      ),

    // Expression4 (expr4)
    //
    // expr4 → expr4 as type
    //       → expr5
    index_access_expr: ($) => prec.left(seq(field("base", $._expr8), "[", field("index", $.expr), "]")),
    _expr8: ($) =>
      prec.left(
        choice(
          $.index_access_expr,
          $.member_access_expr,
          $.term,
        ),
      ),

    // Term (term)
    //
    // term → lit
    //      → default < type >
    //      → map ( fun , expr , …¹ , expr )
    //      → fold ( fun , expr , expr , …¹ , expr )
    //      → fun ( expr , … , expr )
    //      → disclose ( expr )
    //      → tref { struct-arg , … , struct-arg }
    //      → [ expr , … , expr ,opt ]
    //      → Bytes [ expr , … , expr ,opt ]
    //      → slice < tsize > ( expr , expr )
    //      → id
    //      → ( expr-seq )
    term: ($) =>
      choice(
        $.lit, // Literal (true, false, nat, str, pad)
        $.default_term, // Default value with type
        $.map_term, // Map function with one or more expressions
        $.fold_term, // Fold with initial value and list
        $.function_call_term, // Function call with zero or more expressions
        $.disclose_term, // Disclose with single expression
        $.struct_term, // Struct literal with type reference
        $.array_literal, // Array literal with optional trailing comma
        $.bytes_literal, // Bytes literal
        $.slice_term, // Slice expression
        $.id, // Identifier
        $.expr_seq_term, // Parenthesized expression sequence
      ),

      array_literal: ($) => seq("[", commaSep(field("element", choice($.expr, $.spread_element))), "]"),
      bytes_literal: ($) => seq("Bytes", "[", commaSep(field("element", choice($.expr, $.spread_element))), "]"),
      spread_element: ($) => seq("...", field("expr", $.expr)),
      slice_term: ($) => seq("slice", "<", field("size", $.tsize), ">", "(", field("value", $.expr), ",", field("index", $.expr), ")"),
    lit: ($) =>
      choice(
        "true",
        "false",
        $.nat,
        $.str,
        $.pad,
      ),

    not_equals: ($) => "!=",
    id: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    function_name: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    nat: ($) => choice(
      "0",
      /[1-9][0-9]*/,        // decimal
      /0[xX][0-9a-fA-F]+/,  // hexadecimal
      /0[oO][0-7]+/,        // octal
      /0[bB][01]+/          // binary
    ),

    // string-literal (str, file)
    //
    // The basic string-literal rule that matches TypeScript strings
    str: ($) => token(choice(/"[^"]*"/, /'[^']*'/)),
